SERVER-47138 Fix mongod.cfg file size when replacing tokens in the custom action

Closes #1366

Signed-off-by: Andrew Morrow <acm@mongodb.com>